[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://arrow.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 4 )

[node name="arrow" type="KinematicBody2D"]
modulate = Color( 1, 0, 0, 1 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
speed = 2200
recoil = 0

[node name="terrain_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="terrain_area"]
position = Vector2( 16, 0 )
shape = SubResource( 1 )

[node name="player_area" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_area"]
position = Vector2( 16, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, 0 )
scale = Vector2( 0.5, 0.125 )
texture = ExtResource( 1 )

[connection signal="body_entered" from="terrain_area" to="." method="_on_terrain_area_body_entered"]
[connection signal="body_entered" from="player_area" to="." method="_on_player_area_body_entered"]
